<resources>
    <string name="app_name">AutoHelp</string>
    <string name="logo">Сеть 112.рф</string>
    <string name="toolbar_title">Cистема взаимопомощи автолюбителей</string>
    <string name="choose_event_type">Выберите тип события</string>
    <string name="inform_driver">Сообщите водителю о событии!</string>
    <string name="parking_title">Вам мешает\nмой автомобиль</string>
    <string name="evacuation_title">Мой автомобиль\nэвакуируют</string>
    <string name="road_accident_title">Мой автомобиль\nпопал в ДТП</string>
    <string name="your_phone_title">Ваш телефон</string>
    <string name="confirm_phone">Подтвердить номер</string>
    <string name="phone_hint">Номер телефона</string>
    <string name="phone_error">Введите корректный номер</string>
    <string name="phone_number_hint">+7 (831) 123-45-67</string>
    <string name="_7">+7</string>
    <string name="culprit_car_number">Гос. номер виновника</string>
    <string name="auto">АВТО</string>
    <string name="moto">МОТО</string>
    <string name="car_number_letter_hint_first">T</string>
    <string name="car_number_hint">123</string>
    <string name="car_number_letter_hint_last">TТ</string>
    <string name="car_number_region_hint">52</string>
    <string name="describe_situation">Опишите ситуацию</string>
    <string name="remained_attempts">На этот номер отправлено SMS с кодом.\nСрок действия кода: 3 мин. Число попыток: %s</string>
    <string name="record_video">Записать видео</string>
    <string name="upload_video">Загрузить видео</string>
    <string name="notify">Уведомить</string>
    <string name="phone_approved">Теперь Вы можете отправить уведомления</string>
    <string name="enter_correct_number">Введите корректный номер</string>

</resources>