<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp">

    <TextView
        android:id="@+id/tv_your_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/your_phone_title"
        android:textColor="@color/main_dark"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_frame_first_letter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_grey_corners_9"
        app:layout_constraintBottom_toBottomOf="@id/et_phone_input"
        app:layout_constraintEnd_toEndOf="@id/et_phone_input"
        app:layout_constraintStart_toStartOf="@id/et_phone_input"
        app:layout_constraintTop_toTopOf="@id/et_phone_input" />


    <EditText
        android:id="@+id/et_phone_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:digits="0123456789 -.+()"
        android:hint="@string/phone_number_hint"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:lines="1"
        android:maxLines="1"
        android:paddingVertical="16dp"
        android:paddingStart="16dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_confirm" />


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_yellow_corners_9"
        android:text="@string/confirm_phone"
        android:textColor="@color/main_dark"
        android:textSize="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view_frame_first_letter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_your_mobile" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="btn_confirm, view_frame_first_letter, et_phone_input"
        app:layout_constraintTop_toBottomOf="@id/tv_your_mobile" />


</androidx.constraintlayout.widget.ConstraintLayout>